samples/_failures_safe/1761495836_9d42de_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2dfe3bc7.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_2dfe3bc7.c:184:29: error: expected ‘;’ at end of input
  184 |                 graph->edges
      |                             ^
      |                             ;
./samples/SAFE/__tmp_2dfe3bc7.c:184:17: error: expected declaration or statement at end of input
  184 |                 graph->edges
      |                 ^~~~~
./samples/SAFE/__tmp_2dfe3bc7.c:184:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2dfe3bc7.c:184:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2dfe3bc7.c:184:17: error: expected declaration or statement at end of input
